--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "file-loader": "^6.1.0",
     "gh-pages": "^3.1.0",
     "html-minify-loader": "^1.4.0",
+    "html-react-parser": "^0.14.2",
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.0",
     "morgan": "^1.10.0",
